Bug 5819 - point disabled scrollbar at the correct image
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@7335 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/global/scrollbars.css
+++ b/app/skin/global/scrollbars.css
@@ -163,7 +163,7 @@ scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"]:active {
    -moz-background-clip: padding;
 }
 scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"][disabled="true"] {
-   background-image: url("chrome://songbird/skin/arrow/arrow_disabled.png");
+   background-image: url("chrome://songbird/skin/arrow/arrow-up-disabled.png");
 }
 
 
